<resources>
    <string name="app_name">Gimnasio UNNE</string>
    <string name="txt_dni">Número de documento</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_nombres">Nombres</string>
    <string name="txt_profesor">Profesor</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_grupo">Grupo:</string>
    <string name="txt_totalCupos">Total de cupos:</string>


    <string name="btn_insertar">Guardar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_altagrupo">Alta grupos</string>
    <string name="btn_fecha">Fecha</string>
    <string name="btn_hora">Hora</string>

    <string name="bienvenido">Bienvenido</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_alumno">AlumnoActivity</string>
    <string name="nav_header_title">Gimnasio UNNE</string>
    <string name="nav_header_subtitle">Secretaria General de Asuntos Sociales</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_personal">PersonalActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
