<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.AltaPersonal">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="Nuevo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <EditText
            android:id="@+id/etdnialtaPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_dni"
            android:inputType="number"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etapellidoaltaPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/txt_apellido"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etnombresaltaPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_nombres"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvAltaPersonalSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Sexo:"/>
            <Spinner
                android:id="@+id/spsexoaltaPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Provincia:"/>
            <Spinner
                android:id="@+id/spinnerProvinciaAltaPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDisplayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha de nacimiento:"
                android:textColor="@color/grey"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btn_date_alta_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1990-01-01"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:textColor="@color/grey"
                style="?android:spinnerStyle"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etestadocivilaltaPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Estado Civil"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etemailaltaPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etpassaltaPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:autofillHints="" />


        <Button
            android:id="@+id/btnaltaPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/btn_guardar" />
    </LinearLayout>

</LinearLayout>