<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaGrupos">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/spinner_horario"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toEndOf="@+id/txt_grupos_horarios"
        app:layout_constraintTop_toBottomOf="@+id/txt_grupos_abm" />

    <Spinner
        android:id="@+id/spinner_profesor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/txt_grupos_profesores"
        app:layout_constraintTop_toBottomOf="@+id/spinner_horario" />

    <Spinner
        android:id="@+id/spinner_cupolibre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/txt_grupos_cupolibre"
        app:layout_constraintTop_toBottomOf="@+id/spinner_profesor" />

    <EditText
        android:id="@+id/txt_totalCupos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_totalCupos"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cupolibre" />

    <EditText
        android:id="@+id/txt_grupos_abm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="123dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_grupo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_grupos_horarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="62dp"
        android:text="horario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_grupos_abm" />

    <TextView
        android:id="@+id/txt_grupos_profesores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="54dp"
        android:text="@string/txt_profesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_grupos_horarios" />

    <TextView
        android:id="@+id/txt_grupos_cupolibre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="cupos libres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_grupos_profesores" />

    <Button
        android:id="@+id/btn_irmenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="20dp"
        android:onClick="irMenu"
        android:text="VOLVER a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_totalCupos" />

</androidx.constraintlayout.widget.ConstraintLayout>